Complex tab completion syntax made simple
Tab completion requests now support all the special syntax features that can be used when entering commands.

Additionally, tab completion will now attempt to complete using what you have already written instead of replacing the whole thing outright.